@@ -1,6 +1,7 @@
 // Copyright (C) 2005-2008 Alexander M. Batishchev aka Godfather (abatishchev at gmail.com)
 
 using System;
+using System.Diagnostics;
 using System.Reflection;
 using System.Windows.Forms;
 
@@ -14,8 +15,8 @@ namespace Reg2Run
 	abstract class Core
 	{
 		static ApplicationSettings settings;
-
 		static string copyright, title;
+		static bool keepConsole;
 
 		#region Properties
 		public static string ApplicationCopyright
@@ -76,12 +77,30 @@ namespace Reg2Run
 			{
 				if (value)
 				{
-					//ManualConsole.Create();					
+					string parentProcessName = ParentProcess.ProcessName;
+					keepConsole = String.Equals(parentProcessName, "explorer") || String.Equals(parentProcessName, "rundll32");
 				}
 				else
 				{
 					ManualConsole.Hide();
 				}
+			}
+		}
+
+		public static bool KeepConsole
+		{
+			get
+			{
+				return keepConsole;
+			}
+		}
+
+		static Process ParentProcess
+		{
+			get
+			{
+				PerformanceCounter pc = new PerformanceCounter("Process", "Creating Process ID", Process.GetCurrentProcess().ProcessName);
+				return Process.GetProcessById((int)pc.NextValue());
 			}
 		}
 
