@@ -3,6 +3,7 @@ Reg2Run Tool Changelog
 2.0.3 (-)
 [+] Additional scopes into ImportObject.Parse() for more memory use optimization
 [+] Now it's possible to specify only application name (without extension indication) for import, i.e. 'reg2run -p foo' while being in foo.exe's root directory
+[+] Console would not be closed if application was called from Windows Explorer, Run As.. or Run menu
 
 [~] Release file names now contains revision number
 [~] Default filter into the open file dialog now is *.exe
